# SkogAI

./: .coveragerc  .env  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Dockerfile.dev  MANIFEST.in  Makefile  README.md  docker-compose-dev.yaml  mkdocs.yml  pyproject.toml  settings.toml  setup.py  wsgi.py
.github/: rename_project.sh
.github/backup/: setup.py
docs/: development.db
instance/: development.db
site/: 404.html  index.html  search.html
skogai/: __main__.py  app.py  cli.py  config.py  models.py  security.py
skogai/ext/: admin.py  auth.py  commands.py
skogai/ext/restapi/: resources.py
skogai/ext/webui/: views.py
skogai/models/: content.py
svim/: lazy-lock.json  lazyvim.json
svim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
svim/lua/plugins/: aider.lua  bufferline.lua  disabled.lua  harpoon.lua
tests/: conftest.py
