[project]
name = "SkogAI"
version = "0.1.0"
description = ""
authors = [
    {name = "skogix"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
    "sqlmodel>=0.0.27,<0.0.28",
    "typer>=0.20.0,<0.21.0",
    "dynaconf>=3.2.12,<4.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "flask[all]>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-simplelogin>=0.2.0",
    "sqlalchemy-serializer>=1.4.12",
    "python-dotenv>=1.2.1",
    "flask-admin>=2.0.1",
    "flask-restful>=0.3.10",
    "pytest>=9.0.0",
    "coverage>=7.11.2",
    "flake8>=7.3.0",
    "black>=25.9.0",
    "isort>=7.0.0",
    "pytest-cov>=7.0.0",
    "codecov>=2.1.13",
    "mypy>=1.18.2",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.6.1",
    "pytest-picked>=0.5.1",
    "flask-debugtoolbar>=0.16.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skogai = 'skogai.__main__:main'

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "coverage (>=7.11.2,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "codecov (>=2.1.13,<3.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "gitchangelog (>=3.0.4,<4.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pytest-picked (>=0.5.1,<0.6.0)"
]
